--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,3 +1,10 @@
+.title {
+  margin: 20px;
+  text-align: center;
+  font-weight: 700;
+  color: #757575;
+}
+
 .form {
   display: flex;
   padding: 40px;
